# vaultty

./: .env  .gitignore  Cargo.toml  Package.resolved  Package.swift  README.md  build.rs  publish.sh  skills-lock.json
Sources/VaulttySwiftDependencies/: VaulttySwiftDependencies.swift
assets/AppIcon.icon/: icon.json
scripts/: benchmark-renderer.swift  build-app.sh  build-libghostty-vt.sh  factory-reset.sh  fetch-command-descriptions.sh  fetch-fig-autocomplete.sh  fetch-zig-0.15.2.sh  install.sh  publish.sh  run.sh  zig-0.15-macos15-wrapper.sh
src/app/: Ansi.swift  Completion.swift  GhosttyOscBridge.c  GitDirectoryState.swift  Info.plist.in  PtySession.swift  TerminalViewController.swift  command-descriptions.json  main.swift  vaultty.entitlements
src/env/: keychain.m  main.rs
src/ghostty_probe/: main.c
src/session_bridge/: main.rs
src/sessiond/: main.rs
