[package]
name = "vaultty"
version = "0.11.0"
edition = "2024"

[dependencies]
base64 = "0.22"
ecies = { version = "0.2", default-features = false, features = ["aes-rust", "std"] }
libc = "0.2"
sha2 = "0.10"

[build-dependencies]
cc = "1"

[[bin]]
name = "vaultty-env"
path = "src/env/main.rs"

[[bin]]
name = "vaultty-sessiond"
path = "src/sessiond/main.rs"
