[package]
name = "vaultty"
version = "0.16.1"
edition = "2024"

[dependencies]
base64 = "0.22"
ecies = { version = "0.2", default-features = false, features = ["aes-rust", "std"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[build-dependencies]
cc = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "vaultty-env"
path = "src/env/main.rs"

[[bin]]
name = "vaultty-sessiond"
path = "src/sessiond/main.rs"

[[bin]]
name = "vaultty-session-bridge"
path = "src/session_bridge/main.rs"
